syntax = "proto3";

message SumRequest {
    int64 input = 1;
}

message SumRepose {
    int64 output =1;
}

service Sum {
    rpc GetSum (SumRequest) returns (SumRepose){}
}
